# PhotoLabel

./: .gitignore  Config.ini  Config_bak.ini  FrmMain.Designer.cs  FrmMain.cs  FrmMain.resx  FrmPicture.Designer.cs  FrmPicture.cs  PhotoLabel.csproj  PhotoLabel.sln  Program.cs  README.md  ThumbnailCard.cs
Ocr/: GoogleVisionClient.cs  OcrCacheService.cs  OcrResult.cs  OcrService.cs  PictureToText.cs  ReplaceRuleStore.cs  ReplaceService.cs
Tool/: Extensions.cs  ParameterDict.cs
Tools/: Common.cs  FrmLog.Designer.cs  FrmLog.cs  L.cs  ParameterDict.cs  WindowsApi.cs
Yolo/: .gitignore  README.md  Yolo.code-workspace  codex_license_plate_yolo_trainer_instructions.md  config.ini  pyproject.toml
Yolo/app/: label_config.py  main.py
Yolo/app/services/: class_service.py  dataset_service.py  file_service.py  inference_service.py  train_service.py
Yolo/app/static/: app.js  data-paths.html  style.css
Yolo/app/templates/: index.html
Yolo/workspace/: classes.json
Yolo/workspace/dataset/: data.yaml
Yolo/workspace/dataset/labels/train/: 251HTB260001_2.txt  251HTB260001_塗装_5.txt  251HTB260001_塗装完了.txt  251HTB260001_塗装完了_1.txt  251HTB260001_塗装完了_2.txt  251HTB260001_塗装完了_3.txt  251HTB260001_塗装完了_4.txt  251HTB260001_塗装完了_5.txt  251HTB260001_塗装完了_膜厚_1.txt  251HTB260001_塗装完了_膜厚_2.txt  251HTB260001_塗装完了_膜厚_3.txt  251HTB260001_組立中_第1層_最終膜厚.txt
Yolo/workspace/dataset/labels/val/: 251HDB187201_塗装完了_1.txt  251HDB199801_塗装完了_最終膜厚_1.txt  251HTB260001_塗装完了_6.txt
setup/: Setup.iss
